discussion/kv_engine/187374/187374_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-55536 Expose history eviction stats

Change-Id: I1500d9ebb9ad37babfaa4ba55e88d709fed0f176

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2023-02-24 14:24:17.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-24 14:24:31.000000000
Message: 
Patch Set 3: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/340009/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-24 14:28:27.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1541/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1541/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1226/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1226/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1645/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1645/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1299/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1299/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1300/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1300/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1264/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1264/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1304/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1304/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1295/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1295/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1272/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:2928:14: error: excess elements in array initializer [clang-diagnostic-error]
             "magma_DataBlocksCompressSize"}};
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:2957:7: error: expected expression [clang-diagnostic-error]
                    "magma_HistorySizeBytesEvicted);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:3780:35: error: function definition is not allowed here [clang-diagnostic-error]
        std::string_view keyArgs) {
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:3795:35: error: function definition is not allowed here [clang-diagnostic-error]
        std::string_view keyArgs) {
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:3810:35: error: function definition is not allowed here [clang-diagnostic-error]
        std::string_view keyArgs) {
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:3826:35: error: function definition is not allowed here [clang-diagnostic-error]
        std::string_view keyArgs) {
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:3906:19: error: function definition is not allowed here [clang-diagnostic-error]
        int nkey) {
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:3939:19: error: function definition is not allowed here [clang-diagnostic-error]
        int nkey) {
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4122:67: error: function definition is not allowed here [clang-diagnostic-error]
                            const BucketStatCollector& collector) {
                                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4191:31: error: function definition is not allowed here [clang-diagnostic-error]
        std::string_view sep) {
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4221:69: error: function definition is not allowed here [clang-diagnostic-error]
        const BucketStatCollector& collector, std::string_view sep) {
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4247:33: error: function definition is not allowed here [clang-diagnostic-error]
        std::string_view value) {
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4273:74: error: function definition is not allowed here [clang-diagnostic-error]
                                                 std::string_view value) {
                                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4287:72: error: function definition is not allowed here [clang-diagnostic-error]
        const BucketStatCollector& col, const ConnCounter& aggregator) {
                                                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4307:63: error: function definition is not allowed here [clang-diagnostic-error]
        const CookieIface* cookie, const AddStatFn& add_stat) {
                                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4342:24: error: function definition is not allowed here [clang-diagnostic-error]
        bool validate) {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4400:74: error: function definition is not allowed here [clang-diagnostic-error]
        const CookieIface* cookie, const AddStatFn& add_stat, Vbid vbid) {
                                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4410:63: error: function definition is not allowed here [clang-diagnostic-error]
        const CookieIface* cookie, const AddStatFn& add_stat) {
                                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:4434:47: error: function definition is not allowed here [clang-diagnostic-error]
        const BucketStatCollector& collector) {
                                              ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1272/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.cc:2928:14:
error: excess elements in array initializer [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1272/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1307/ : FAILURE

Compile error at [2023-02-24T14:26:51.273Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/ep_engine.cc:2957:7:
error: missing terminating " character
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1307/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22973/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
